--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-regular-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/vue-fontawesome": "^3.1.2",
+    "bootstrap": "^5.3.8",
+    "element-plus": "^2.11.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
